# webserver

./: CMakeLists.txt  common.h  main.cpp
include/: ClientSocketScoped.h  HTTPServer.h  ServerSocketScoped.h  Utils.h
source/: ClientSocketScoped.cpp  HTTPServer.cpp  ServerSocketScoped.cpp  Utils.cpp
www/: about.html  index.html
www/errors/: 404.html  500.html
